--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  zhihu            : "https://www.zhihu.com/people/xiao-jian-bu-wen-sheng-jian-qiao-65"
 
 
 # Reading Files
